--- a/css/styles.css
+++ b/css/styles.css
@@ -4,4 +4,181 @@ footer {
   border: 1px solid;
 }
 
+/* Hero section*/
+.hero-text {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.37;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: var(--grey-text-op60);
+}
 
+.hero-title {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 72px;
+  line-height: 1.18;
+  letter-spacing: 0.05em;
+  color: var(--white-text);
+}
+
+.hero-description {
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: var(--grey-text);
+}
+
+.hero-btn {
+  border: none;
+  background-color: transparent;
+
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.17;
+  letter-spacing: 0.1em;
+  color: var(--grey-text-op60);
+}
+
+.hero-btn-forward {
+  color: var(--white-text);
+}
+
+/* About section */
+
+.about-title {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 42px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+}
+
+.about-main-text {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.17;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: var(--grafite);
+}
+
+.about-secondary-text {
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: var(--grafite-light);
+}
+
+.about-description {
+  font-size: 14px;
+  line-height: 1.86;
+  letter-spacing: 0.02em;
+  color: var(--grafite-light);
+}
+
+.ordering-button-dark {
+  color: var(--grafite);
+}
+
+/* Services & Prises */
+.services-text {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.17;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: var(--grey-text-op60);
+}
+
+.services-title {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 42px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+  color: var(--white-text);
+}
+
+.services-table {
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+  color: var(--grey-text);
+}
+
+/* Advantages */
+.advantages-number {
+  font-weight: bold;
+  font-size: 42px;
+  line-height: 1.36;
+  letter-spacing: 0.05em;
+}
+
+.advantages-description {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.37;
+}
+
+.advantages-text {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.37;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+.advantages-title {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 42px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+}
+
+.advantages-main-description {
+  font-size: 18px;
+  line-height: 1.67;
+  letter-spacing: 0.02em;
+}
+
+/* Team */
+.team-text {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.37;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+.team-title {
+  font-family: 'Raleway', sans-serif;
+  font-weight: bold;
+  font-size: 42px;
+  line-height: 1.17;
+  letter-spacing: 0.05em;
+}
+
+.team-name {
+  font-size: 18px;
+  line-height: 1.39;
+  letter-spacing: 0.02em;
+}
+
+.person-position {
+  font-size: 14px;
+  line-height: 1.36;
+  letter-spacing: 0.02em;
+  color: var(--orange);
+}
+
+/* Works */
+.works-text {
+  font-weight: 600;
+  font-size: 11px;
+  line-height: 1.37;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
